[package]
name = "mcp-proxy"
version = "0.1.0"
edition = "2021"
description = "Rust MCP Proxy for Augment Context Engine - manages auggie backend lifecycle"
license = "MIT"
repository = "https://github.com/user/auggie-rs"
keywords = ["mcp", "proxy", "augment", "context-engine"]
categories = ["development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "1"

# URL decoding
percent-encoding = "2"

# LRU cache for backend management
lru = "0.12"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemInformation",
] }

# Unix-specific dependencies (macOS, Linux)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "fs", "resource"] }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
